--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <!-- Custom styles for this template -->
 
     <!-- Custom styles import-->
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
@@ -225,7 +221,7 @@
 </section>
 
 
-<!-- Bootstrap core JavaScript -->
+<!-- Bootstrap & JavaScript core -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
